--- a/src/public/themes/uitoux-theme2/status-pkg/status/form.html
+++ b/src/public/themes/uitoux-theme2/status-pkg/status/form.html
@@ -76,7 +76,8 @@
                                                     Color
                                                     <sup class="mandatory">*</sup>
                                                 </label>
-                                                <input type="text" class="form-control" ng-model="$ctrl.status.color" name="color" placeholder="Enter Last Name" />
+                                                <color-picker options="color_picker_options" ng-model="$ctrl.status.color"></color-picker>
+                                                <input type="text" ng-model="$ctrl.status.color" name="color" />
                                             </div><!-- Feild -->
                                         </div><!-- Column -->
                                         <div class="col-md-3">
