added display order in statuses

--- a/src/public/themes/uitoux-theme2/status-pkg/status/form.html
+++ b/src/public/themes/uitoux-theme2/status-pkg/status/form.html
@@ -82,6 +82,14 @@
                                         <div class="col-md-3">
                                             <div class="input-text form-group">
                                                 <label>
+                                                    Display Order
+                                                </label>
+                                                <input type="text" class="form-control" ng-model="$ctrl.status.display_order" name="display_order" placeholder="Enter Display Order" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="input-text form-group">
+                                                <label>
                                                     Active Status
                                                     <sup class="mandatory">*</sup>
                                                 </label>
