--- a/src/public/themes/uitoux-theme2/status-pkg/status/list.html
+++ b/src/public/themes/uitoux-theme2/status-pkg/status/list.html
@@ -89,12 +89,12 @@
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name" autocomplete="off">
                             </div><!-- Field -->
                         </div><!-- Column -->
-                        <div class="col-md-6">
+                       <!--  <div class="col-md-6">
                             <div class="form-group">
                                 <label>Color</label>
                                 <input type="text" class="form-control" id="color" name="color" placeholder="Enter Last Name" autocomplete="off">
-                            </div><!-- Field -->
-                        </div><!-- Column -->
+                            </div>
+                        </div> -->
                          <div class="col-md-6">
                             <div class="form-group">
                                 <label>Display Order</label>
