status card list - crud completed

--- a/src/public/themes/uitoux-theme2/status-pkg/status/card-list.html
+++ b/src/public/themes/uitoux-theme2/status-pkg/status/card-list.html
@@ -4,7 +4,7 @@
             <div class="page-header-content-left">
                 <div class="page-header-content title-block">
                     <h1 class="title type-2">
-                        Statuses ()
+                        Statuses ({{status_types.length}})
                     </h1>
                     <!-- <p class="subtitle">Masters / JV Masters / Employee Designation Designations</p> -->
                 </div><!-- Page Header Content -->
